--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,26 +1,15 @@
 Urgent:
 ----------------------------------------------------
-Z - Ablakok átméretezése
-K - #####-k ellenőrzése
 L - További diagram paraméterek kirakása a config-ba:
     minAxisValue
-    maxAxisValue
-    dataUnit
+    maxAxisValue -> radarra is
+L - Serial chart ne frissüljön évváltásnál
+Z - config egységesítése (legyen mindenhol minden paraméter)    
 Z - Service-kre felirat
-Z - Táblázat formázása
-    általános
-    aktuális év
+    Lakás -> infrastruktúra % képzése
+Z - Táblázat formázása -> aktuális év színezése
 K - init function (+ rákötése a témaválasztásra)
-LZ - témák konfigurálása (L: lak, ben; Z: bun)
-L - serial chart
-    csak azok jelenjenek meg, amelyek szerepelnek a timeStops configban
-    sorrendjük időben növekedjen
-L - bubble chart
-    bogyók csökkenő sorrendben rajzolódjanak ki
-Z - table
-    nem jelenik meg a táblázat címe (config)
-L - charts
-    dataUnit config interpretálás
+K - #####-k ellenőrzése
 
 Not So Urgent:
 ----------------------------------------------------
@@ -39,3 +28,8 @@ License kitöltése
 Credits kitöltése - console.log-ba is mehet
 többi console.log-ok kitörlése
 theme template készítése
+
+Later development:
+----------------------------------------------------
+Adatbázis kapcsolat (térképről csak egy ID-t kapunk, amivel szerver oldali lekérdezést futtatunk)
+Ablakok átméretezése (bármelyik kinagyítható legyen teljes képernyőre)
