--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,18 +1,11 @@
 ToDo
 ----------------------------------------------------
-
 Z - Configuration Guide összevetése a config validatorral.
 Z - Configuration Guide befejezése
 K - gyakorló time-aware map service készítése (EUROSTAT adatok)
 K - A konferenciára megcsinálni a bemutatós config.json-t
 
 Z - Dashboard MapService Creation Guide készítése (PDF)
-
-Z - Megjelölni, milyen paraméterek pakolhatók át a config-ba a jövőben. (Használjuk hozzá a @@@ jelölést!)
-Z - Minden kód kommentelése
-Z - Felesleges console.log-ok kitörlése
-Z - #####-k ellenőrzése
-Z - Ellenőrizni, hogy semmi fontos ne maradjon "hard code"
 
 K - Teszt time-aware service-ek készítése
 K - Tesztelni az alkalmazást:
@@ -30,3 +23,4 @@ Két azonos típusú diagram is elhelyezhető legyen (pl. 2 pie)
 Minden panelen legördülőben lehessen választani a diagram típusok között (front-end diagramtípus állítás)
 Még több paraméter kihelyezése a config.json-be
 Keresési funkció beépítése (Search Class or AdvancedSearch Class)
+Böngésző fejléc testreszabása
