--- a/ToDo.txt
+++ b/ToDo.txt
@@ -23,4 +23,4 @@ Két azonos típusú diagram is elhelyezhető legyen (pl. 2 pie)
 Minden panelen legördülőben lehessen választani a diagram típusok között (front-end diagramtípus állítás)
 Még több paraméter kihelyezése a config.json-be
 Keresési funkció beépítése (Search Class or AdvancedSearch Class)
-Böngésző fejléc testreszabása
+Böngésző fejléc testreszabhatósága
