--- a/ToDo.txt
+++ b/ToDo.txt
@@ -23,3 +23,4 @@ Minden panelen legördülőben lehessen választani a diagram típusok között 
 Még több paraméter kihelyezése a config.json-be
 Keresési funkció beépítése (Search Class or AdvancedSearch Class)
 Böngésző fejléc testreszabhatósága (<title></title>)
+Vonaldiagram beépítése (további diagramtípusok?)
