--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,12 +1,6 @@
 ToDo
 ----------------------------------------------------
-K - gyakorló time-aware map service-k készítése (EUROSTAT adatok)
-K - gyakorló service-k metázása
-K - config.json kitöltése a gyakorló service-k alapján
-K - alkalmazás megosztása (05.26.)
-
-Z - README.md készítése
-Z - Dashboard MapService Creation Guide készítése (PDF)
+Dashboard MapService Creation Guide készítése (PDF)
 
 K - Teszt time-aware service-ek készítése
 K - Tesztelni az alkalmazást:
